ISIS-3267 : adds BackgroundService
also changes design of CommandLogEntry, persist parentInteractionId rather than parent reference, and reinstate executeIn enum attribute

--- a/extensions/adoc/modules/ROOT/partials/module-nav.adoc
+++ b/extensions/adoc/modules/ROOT/partials/module-nav.adoc
@@ -1,21 +1,21 @@
 
-* Core:
+* Core
 
 
 include::userguide:ROOT:partial$extensions.adoc[]
 
-* Security:
+* Security
 
 include::security:ROOT:partial$extensions.adoc[]
 
 
 
-* Restful Objects:
+* Restful Objects
 
 include::vro:ROOT:partial$extensions.adoc[]
 
 
-* Wicket viewer:
+* Wicket viewer
 
 include::vw:ROOT:partial$extensions.adoc[]
 
