--- a/testing/hsqldbmgr/adoc/modules/hsqldbmgr/pages/about.adoc
+++ b/testing/hsqldbmgr/adoc/modules/hsqldbmgr/pages/about.adoc
@@ -15,7 +15,7 @@ NOTE: the HSQLDB Manager is a Swing application, so this can only be used in a l
 
 include::docs:mavendeps:partial$setup-and-configure-dependencyManagement.adoc[leveloffset=+2]
 
-In addition, add a section for the BOM of all the testing support libraries:
+In addition, add an entry for the BOM of all the testing support libraries:
 
 [source,xml,subs="attributes+"]
 .pom.xml
