--- a/extensions/core/flyway/adoc/modules/flyway/pages/about.adoc
+++ b/extensions/core/flyway/adoc/modules/flyway/pages/about.adoc
@@ -2,19 +2,48 @@
 
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-This module provides a very thin layer to use Spring Boot's integration with https://flywaydb.org[Flyway]
+The _Flyway_ extension module provides a very thin layer to use Spring Boot's integration with https://flywaydb.org[Flyway]
 
-== Configuration
+== Setup
 
-Add the following dependency:
+=== Dependency Management
+
+Add a section for _Flyway_'s own BOM:
+
+[source,xml,subs="attributes+"]
+.pom.xml
+----
+<dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.causeway.extensions</groupId>
+            <artifactId>causeway-extensions-flyway</artifactId>
+            <scope>import</scope>
+            <type>pom</type>
+            <version>{page-causewayrel}</version>
+        </dependency>
+    </dependencies>
+</dependencyManagement>
+----
+
+[#dependencies]
+=== Dependencies
+
+In the webapp module of your application, add the following dependency:
 
 [source,xml]
+.pom.xml
 ----
-<dependency>
-    <groupId>org.apache.causeway.extensions</groupId>
-    <artifactId>causeway-extensions-flyway-impl</artifactId>
-</dependency>
+<dependencies>
+    <dependency>
+        <groupId>org.apache.causeway.extensions</groupId>
+        <artifactId>causeway-extensions-flyway-impl</artifactId>
+    </dependency>
+</dependencies>
 ----
+
+[[_update-appmanifest]]
+=== Update AppManifest
 
 Also add the following module to your `AppManifest`:
 
@@ -29,6 +58,9 @@ Also add the following module to your `AppManifest`:
 public static class AppManifest {
 }
 ----
+
+[#configure-properties]
+=== Configuration Properties
 
 Configure Flyway connection parameters:
 
@@ -80,6 +112,6 @@ The xref:docs:starters:simpleapp.adoc[simpleapp starter app] also provides an ex
 
 
 
-== Reference
+== See also
 
 * https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto-execute-flyway-database-migrations-on-startup[Spring Boot docs] for Flyway integration
