--- a/testing/fixtures/adoc/modules/fixtures/pages/fixture-scripts/maven-configuration.adoc
+++ b/testing/fixtures/adoc/modules/fixtures/pages/fixture-scripts/maven-configuration.adoc
@@ -4,7 +4,7 @@
 
 include::docs:mavendeps:partial$setup-and-configure-dependencyManagement.adoc[leveloffset=+1]
 
-In addition, add a section for the BOM of all the testing support libraries:
+In addition, add an entry for the BOM of all the testing support libraries:
 
 [source,xml,subs="attributes+"]
 .pom.xml
